# RBAC_KEYCLOAK

Backend/: README.md  pyproject.toml
Backend/api/: main.py
Backend/api/core/: config.py  controller.py
Backend/api/repository/schemas/: keycloak.py
Backend/api/routers/: auth_routes.py
Backend/api/services/: keycloak_service.py
Frontend/: package-lock.json  package.json
Frontend/src/: App.svelte
Frontend/src/lib/: api.js  keycloak.js
Frontend/src/lib/routes/: Protected.svelte
